# spec-ib

./: .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONFORMANCE.md  IDENTIFIERS.md  README.md  SE_MANIFEST.toml  SPEC.md  pyproject.toml
.github/workflows/: ci-python.yml
data/spec/: conformance-checks.json  requirements.json  scope-exclusions.json
src/spec_ib/: __init__.py  __main__.py  cli.py  export.py  extractor_utils.py  load.py  orchestrate.py  paths.py  ref_utils.py  reference.py  validate.py
src/spec_ib/commands/: manifest.py  reference.py  root.py  validate.py
tests/: test_conformance_coverage.py  test_exports.py  test_identifiers.py  test_spec_coverage.py
