# ============================================================
# pyproject.toml (Python project configuration)
# ============================================================
# Updated: 2026-05-15
# REQ.PYTHON: Python projects MUST include pyproject.toml as the single source of truth.
# WHY: Centralizes project configuration.
# CUSTOM: Update identity and build tool src folders.

# ============================================================
# SECTION 1: PROJECT IDENTITY (name, version, CUSTOM dependencies)
# ============================================================

[project]
name = "spec-ib" # Package distribution name (lowercase and dashes).
readme = "README.md"
requires-python = ">=3.15"
dynamic = ["version"] # WHY: Version is computed from git tags at build time (see [tool.hatch.version] below).

dependencies = [
    "se-manifest-schema @ git+https://github.com/structural-explainability/se-manifest-schema.git@main", # WHY: Greenfield spec repos intentionally track the active manifest schema while the ecosystem is stabilizing.
]

[project.optional-dependencies]
# WHY: Optional dependency groups keep the core install clean and focused.
dev = [
    # REQ.DEV.DEPS: External packages used for linting, testing, type checking, etc.
    "build", # WHY: build tool required for packaging and publishing.
    "packaging",  # WHY: Required by validate-pyproject for dependency and license validation.
    "pre-commit",
    "pyright",
    "pytest",
    "pytest-cov",
    "ruff",
    "PyYAML ", # WHY: Used for testing manifest parsing logic with YAML fixtures.
]

docs = [
    # REQ.DOCS.DEPS: External packages used to generate project documentation.
    # "zensical==0.0.37", # WHY: Link resolution fails with newer versions; pinning to a known working version.,
]

[project.scripts]
se-validate = "spec_ib.cli:validate_main"
se-manifest-version-sync = "spec_ib.cli:sync_main"
se-ref-validate = "spec_ib.cli:ref_validate_main"
se-ref-export = "spec_ib.cli:ref_export_main"

# ============================================================
# SECTION 2: TOOL CONFIGURATION (Professional basics)
# ============================================================

# === PYRIGHT (TYPE CHECKING HELPS FIND COMMON ERRORS BEFORE THE CODE RUNS) ===

[tool.pyright]
# CUSTOM: Pyright configuration for static type checking.
# WHY: Strict type checking helps catch bugs early.
include = ["src"] # WHY: Include both source and test code for comprehensive type checking.
extraPaths = ["src"] # WHY: Ensure imports are resolved relative to src/ for consistent behavior across environments.
exclude = ["**/node_modules", "**/.*", ".venv", "**/__pycache__", "dist", "build"]
pythonVersion = "3.13" # 3.14 stubs incomplete in current pyright
reportMissingTypeStubs = "none" # WHY: Avoid warnings from third-party libraries without type stubs.
reportMissingImports = "warning" # WHY: Warn about missing imports to catch potential issues, but allow flexibility in notebooks and dynamic code.
reportPrivateUsage = "none" # WHY: Allow usage of private members (e.g., _version.py) without warnings, common in Python projects.
reportUntypedClassDecorator = "none"  # @dataclass stubs incomplete in current pyright
reportArgumentType = "none"           # len() resolves to collections.abc, pyright bug
reportUnknownMemberType = "none"      # WHY: confluent_kafka + duckdb stub gaps
reportUnknownVariableType = "none"    # WHY: confluent_kafka + duckdb stub gaps
reportCallIssue = "none"              # WHY: @dataclass frozen in KafkaSettings
typeCheckingMode = "basic" # strict | basic | off

[[tool.pyright.executionEnvironments]]
root = "tests"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportMissingParameterType = "none"
reportUnknownArgumentType = "none"

# === PYTEST (VERIFY LOGIC) ===

[tool.pytest.ini_options]
# WHY: Consistent test discovery and coverage visibility.
minversion = "9.0"
testpaths = ["tests"]
addopts = "--cov=spec_ib --cov-report=term-missing --cov-fail-under=25"

# === RUFF (PYTHON FORMATTING AND LINTING) ===

[tool.ruff]
# WHY: Fast linting and formatting in one tool.
exclude = [
    ".eggs",
    "*.egg-info",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "site",
]
line-length = 88 # WHY: PEP 8 standard, wrap when possible.
preview = false # WHY: Stable features only; avoid preview features.
target-version = "py313" # WHY: 3.14 not available yet; match latest supported Python version.
unsafe-fixes = false # WHY: Avoid potentially unsafe automatic fixes.

[tool.ruff.format]
# WHY: Formatter choices should be stable to keep diffs small and predictable.
indent-style = "space" # See also .gitattributes for indent style.
line-ending = "auto" # Match existing files and let .gitattributes handle it.
quote-style = "preserve" # Preserve existing quote styles to minimize churn.

[tool.ruff.lint]
# WHY: Baseline + stricter categories:
select = [
    "E",  # Basic syntax and structural correctness
    "F",  # Undefined names and unused imports
    "W",  # Warnings that catch easy issues early
    "I",  # Deterministic import ordering
    "UP", # Modern Python constructs
    "B",  # Common bug patterns

    "PTH", # Prefer pathlib patterns
    "C4",  # Comprehension correctness and clarity
    "SIM", # Simplify obvious complexity
    "RET", # Return practices

    "D", # Docstring standards (see convention below)
    "S", # Security checks (with deliberate exceptions)
]
ignore = [
    "E501", # line length handled by formatter
    "D203", # conflicts with D211
    "D213", # conflicts with D212 (Google standard summary placement)
    "S101", # allow assert (tests + internal invariants)
]

[tool.ruff.lint.isort]
# WHY: Ordering imports helps keep code diffs (differences) readable.
force-sort-within-sections = true

# === PER-FILE IGNORES (DEPENDS ON DOCSTRING POLICY) ===

[tool.ruff.lint.per-file-ignores]
# WHY: Some files must not be auto-modified.
"src/**/__init__.py" = ["F401"]     # Allow re-export patterns
"src/**/_version.py" = ["ALL"]      # Auto-generated file (do not lint)
"tests/**/*.py" = ["D", "B018", "B011", "S101"]
"src/**/py.typed" = ["ALL"]

# === CHOOSE PROJECT DOC STYLE ===

[tool.ruff.lint.pydocstyle]
# REQ: Google style is the project-wide docstring convention.
convention = "google"   # ALT: "numpy" choose one, never mix.

# ============================================================
# SECTION 3: BUILD SYSTEM (boilerplate; CUSTOM src/ agreement)
# ============================================================
#
# REQ.PROJECT: A build system MUST be declared for package discovery and publishing.
# REQ.STRUCTURE: All importable code MUST live under src/.
# WHY src/ layout: Prevents accidental imports from the repo root;
#     ensures consistent behavior across IDEs, tests, CI, and PyPI.

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.build.hooks.vcs]
# WHY: Writes computed version into src/*/_version.py at build time.
# CUSTOM: Must match src/ folders.
version-file = "src/spec_ib/_version.py"

[tool.hatch.build.targets.wheel]
# CUSTOM: Must match src/ folders.
packages = ["src/spec_ib"]  # REQ.PACKAGES: Discovery rooted at src/.

[tool.hatch.metadata]
allow-direct-references = true # WHY: Allow direct references to git repos for dependencies, common in greenfield projects.

[tool.hatch.version]
# WHY: Version derived from git tags at build time
source = "vcs"
fallback-version = "0.9.1"        # Used when no git tags present (fresh clone, CI).
tag-pattern = "^(?:v)?(?P<version>\\d+\\.\\d+\\.\\d+)$"
